# ingresso.rocha

./: Cargo.toml  create.sql  database.sqlite
.cargo/: config.toml
src/: email.rs  event.rs  event_repository.rs  get_ticket.rs  lib.rs  main.rs  purchase_ticket.rs  ticket.rs  ticket_repository.rs
tests/: main.rs  ticket.rs
