[package]
name = "ingresso_rocha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v7", "std"] }
rusqlite = "0.31.0"
